--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/router": "^17.3.0",
     "apexcharts": "^3.54.1",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.8",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "ng-apexcharts": "^1.10.0",
+    "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
